fix: [PIDM-1668] Dead letter message timestamp filter